# slambot_ws

./: .gitignore  README.md  arduino_sketch.ino
Extras/: uno_serial_CPP.cpp
log/: COLCON_IGNORE  latest_build  latest_list
src/arduino_files/: arduino_class.cpp  arduino_sketch.ino
src/arduino_sketch/: arduino_sketch.ino
src/arduino_sketch/include/: arduino_class.cpp  arduino_class.hpp
src/config/: my_room_map.yaml
src/inverse_kinematics/: CMakeLists.txt  package.xml
src/inverse_kinematics/include/inverse_kinematics/: inverse_kinematics.hpp  inverse_kinematics_test.hpp
src/inverse_kinematics/src/: inverse_kinematics.cpp  inverse_kinematics_test.cpp  main.cpp
src/log/: latest_build
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/include/robot_control/: autonomous_control.hpp  cli_manual_control.hpp  controller_publisher.hpp  inverse_kinematics.hpp  serial_communication.hpp
src/robot_control/src/: autonomous_control.cpp  cli_manual_control.cpp  controller_publisher.cpp  inverse_kinematics.cpp  robot_control.cpp  serial_communication.cpp
src/robot_gui/: CMakeLists.txt  package.xml
src/robot_gui/src/: robot_gui.cpp
src/uno_serial/: package.xml  setup.cfg  setup.py
src/uno_serial/uno_serial/: uno_serial.py  uno_serial_CPP.cpp
